add manually created resources on AWS & CircleCI
- Public S3 bucket
- Cloudfront
- Database

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -451,8 +451,8 @@ jobs:
       # - slack-success-notification
       # Custom failure reason message
       - custom-failure-alert-message:
-          custom_message:
-            "Please ensure i) appropriate stack name with workflow id,
+          custom_message: "
+            Please ensure i) appropriate stack name with workflow id,
             ii) correct CircleCi workflow id referencing,
             iii) correct values in project/.circleci/files/backend.yml (AMI ID, KeyPair name) applicable to AWS account/region"
 
@@ -550,8 +550,8 @@ jobs:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       # Custom failure reason message
       - custom-failure-alert-message:
-          custom_message:
-            "Please ensure i) appropriate docker image and installed dependencies,
+          custom_message: "
+            Please ensure i) appropriate docker image and installed dependencies,
             ii) correct fingerprint,
             iii) correctly completed configure-server ansible playbook"
       # Success notification
@@ -623,8 +623,8 @@ jobs:
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       - custom-failure-alert-message:
-          custom_message:
-            "Please ensure i) appropriate docker image and installed dependencies,
+          custom_message: "
+            Please ensure i) appropriate docker image and installed dependencies,
             ii) migration status in text stored in correct place and correct path reference to it
             iii) bucket ID created in kvdb.io and referenced appropriately in storing success status"
       # - slack-success-notification
@@ -677,8 +677,8 @@ jobs:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       # Custom failure reason message
       - custom-failure-alert-message:
-          custom_message:
-            "Please ensure i) appropriate docker image and installed dependencies,
+          custom_message: "
+            Please ensure i) appropriate docker image and installed dependencies,
             ii) filter to describe backend ec2 URL matches with its definition in project/.circleci/files/backend.yml
             iii) files copied to the correct S3 bucket its definition in project/.circleci/files/frontend.yml"
       # Success notification
@@ -857,19 +857,19 @@ jobs:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       # Custom failure reason message
       - custom-failure-alert-message:
-          custom_message:
-            "If backend failed smoke test please check that manually created resources pass tests e.g. database before running workflow.
+          custom_message: "
+            If backend failed smoke test please check that manually created resources pass tests e.g. database before running workflow.
             Also make sure updated CircleCI environment variables e.g. TYPEORM_HOST
             If yes then investigate further (backend issues usually stem from configure-infrastructure or run-migrations.)
             Check kvdb bucket for migration status
             AND/OR disable both destory-environment and revert-migration on failure in steps after infra deployed e.g. smoke-test job then:
             ssh into the EC2 instance (ssh -i /path/key-pair-name.pem instance_user_name@instance_public_dns_name) remember to chmod 400 pem file first if haven't so already
             then view production process manager logs (sudo pm2 monit) and (npm run start).
-            For config validation error echo ${'env_var_name'} to find out if it is present.
+            For config validation error echo env_var_name value to find out if it is present.
             If blank address this (ensure correct variables entered in CircleCI project setting. If yes likely persitance issues)
             Discover where environment variables are present before zipped backend folder extracted in EC2 instance.
-            From the configure-infrastructure job run ${'env_var_name'} with a env with few characters
-            Check if output length of ${'env_var_name'} equal to value of env_var_name length.
+            From the configure-infrastructure job run env_var_name value with a env with few characters
+            Check if output length of env_var_name value equal to value of env_var_name length.
             If yes then make backend/.env containing the environment variables so that it's migrated to EC2 instance in run-migrations job
             (this helps with ensured and easy to test persistence of env variables).
             While creating backend/.env ensure overwrite for first variable then append the other variables
