debug: comment out rollback

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -853,9 +853,10 @@ jobs:
             fi
 
       # Here's where you will add some code to rollback on failure
-      - destroy-environment:
+      
+      # - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
-      - revert-migrations:
+      # - revert-migrations:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       # Custom failure reason message
       - custom-failure-alert-message:
