--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -862,7 +862,7 @@ jobs:
       - custom-failure-alert-message:
           custom_message: "
             If backend failed smoke test please check that manually created resources pass tests e.g. database before running workflow.
-            Also make sure updated CircleCI environment variables e.g. TYPEORM_HOST
+            Also make sure updated CircleCI environment variables (esp TYPEORM_HOST) with the correct value (esp database instance identifier part)
             If yes then investigate further (backend issues usually stem from configure-infrastructure or run-migrations.)
             Check kvdb bucket for migration status
             AND/OR disable both destory-environment and revert-migration on failure in steps after infra deployed e.g. smoke-test job then:
