--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1037,7 +1037,7 @@ workflows:
           # SCREENSHOT10
           filters:
             branches:
-              only: [master, develop]
+              only: [master]
       # # B.1.b Configure Infrastructure (1.b)
       - configure-infrastructure:
           requires: [deploy-infrastructure]
