attempt(fix): pm2 state present + install n in backend
- pm2 state present in configure-server to match version in deploy
- Install n in configure-server and deploy

--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -25,4 +25,12 @@
     name: pm2
     global: yes
     production: yes
-    state: latest
+    state: present
+
+# Install n
+- name: "install n"
+  become: true
+  npm:
+    name: n
+    global: yes
+    production: yes
