--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -55,3 +55,8 @@
   ## Read project/.circleci/ansible/roles/configure-server/tasks/readme.md
   roles:
     - configure-server
+      # Alerts
+      # Add a section to your back-end configuration job to install the node_exporter for Prometheus monitoring.
+      # This should be done using Ansible.
+      # Setup Backend Monitoring with Prometheus
+    - configure-prometheus-node-exporter
