docs: specify why installing n (node version management)

--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -27,7 +27,7 @@
     production: yes
     state: present
 
-# Install n
+# Install n for node version management
 - name: "install n"
   become: true
   npm:
