--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -34,3 +34,8 @@
     name: n
     global: yes
     production: yes
+
+# install/specify project recommended NodeJS version
+- name: "specify nodejs 13.8.0"
+  become: true
+  shell: n 13.8.0
