--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -575,6 +575,7 @@ jobs:
           command: |
             cd backend
             npm install
+            npm audit fix --force
             npm run migrations > migrations_dump.txt
             echo "Show files and directories in backend (tree)"
             tree -CL 2
