--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -53,12 +53,11 @@
 - name: "extract the zipped artifact into the EC2 instance"
   become: true
   unarchive:
-    src: ~/project/artifact.tar.gz
-    dest: /home/ubuntu
+    src: files/artifact.tar.gz
+    dest: .
 
 - name: "start app"
   become: true
   shell: |
-    npm install  
-    pm2 stop default  
-    sudo pm2 start npm -- start
+    pm2 delete all
+    pm2 start npm -- start
