--- a/.circleci/ansible/deploy-backend.yml
+++ b/.circleci/ansible/deploy-backend.yml
@@ -9,7 +9,8 @@
     - ansible_stdout_callback: yaml
   # Ensure to create backend/.env file with name and values for the environment variables below
   environment:
-    - NODE_ENV: "production"
+    - NODE_ENV: production
+    - ENVIRONMENT: production
     - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"
     - TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST')}}"
     - TYPEORM_PORT: 5432
